correct aspect ratio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="correct" style="display:none;">
 
         <div id="header">
-
+            <p>A little word guessing game, get a new grid by reloading this page!</p>
         </div>
 
         <div id="row_or_col_container">
